# CPPDiveDeep

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
SRC_CPPDiveDeep/: CMakeLists.txt  source.cpp
SRC_CPPDiveDeep/TaskManagementSystem/: CMakeLists.txt
SRC_CPPDiveDeep/TaskManagementSystem/inc/: member.h  personalTask.h  task.h  taskFactory.h  taskManagement.h  taskManagementSystem.h  workTask.h
SRC_CPPDiveDeep/TaskManagementSystem/src/: member.cpp  personalTask.cpp  taskFactory.cpp  taskManagement.cpp  taskManagementSystem.cpp  workTask.cpp
SRC_CPPDiveDeep/inc/: includes.h  logger.h  vectorImplementation.h
SRC_CPPDiveDeep/src/: for_each.cpp  logger.cpp  source.cpp
TEST_CPPDiveDeep/: CMakeLists.txt  testMain.cpp
inc/: includes.h
src/: source.cpp  vectorImplementation.cpp
